src/test/resources/semantic/custom/accept/variableDeclaration.ul
void main() {
}

int foo(int foo) {
    float bar;
    string buzz;
}

void bar(int bar) {
    int foo;
}
