src/test/resources/semantic/custom/reject/printlnVoidType.ul
void main() {
}

void foo() {
    println bar();
}

void bar() {
}
